changes in responsiveness

--- a/dis/home.html
+++ b/dis/home.html
@@ -49,7 +49,7 @@
     </div>
  
 
-  <div class="w-full h-auto flex  justify-evenly p-4">
+  <div class="w-full h-auto grid grid-cols-1 md:grid-cols-3 gap-4">
     <div class="w-full flex flex-col items-center">
         <img class="w-40 h-40 rounded-full object-cover" src="https://img.freepik.com/premium-photo/elearning-3d-render-icon-illustration_726846-3416.jpg?w=740" alt="">
         <p class="text-xl text-white font-bold ">600+</p>
@@ -68,10 +68,13 @@
         <p class="text-xl text-gray-500 font-bold">Faculty</p>
     </div>
 
+    
+    
    
   </div>
 
      <!-- student sections ends here -->
+
 
 </body>
 </html>
